Thu Apr 07 15:57:15 BST 2005  Olly Betts <olly@survex.com>

	* api/omenquire.cc,common/omenquireinternal.h,common/multimatch.h,
	  matcher/multimatch.cc,net/socketserver.cc: Tidy up after sort_bands.

Thu Apr 07 15:15:27 BST 2005  Olly Betts <olly@survex.com>

	* api/omenquire.cc,common/,include/xapian/enquire.h,
	  matcher/networkmatch.cc,matcher/multimatch.cc,matcher/networkmatch.h,
	  net/socketserver.cc,net/socketclient.cc,tests/api_db.cc:
	  Enhanced Enquire sorting API and added ability to reverse sort on
	  a value.
	* api/omenquire.cc: Enquire::get_description() now includes output of
	  Enquire::Internal::get_description().
 
Thu Apr 07 13:55:56 BST 2005  Olly Betts <olly@survex.com>

	* HACKING: Fixed a typo.

Thu Apr 07 13:37:02 BST 2005  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h,
	  bin/quartzcompact.cc: The "fuller compaction" code needs changes
	  to btree.h which I'd failed to check in.  Also document --fuller
	  in 'quartzcompact --help'.

Thu Apr 07 03:35:36 BST 2005  Olly Betts <olly@survex.com>

	* bin/quartzcompact.cc: Added "fuller compaction" mode, which ignores
	  the usual "at least 4 items per block" rule.

Thu Apr 07 03:28:32 BST 2005  Olly Betts <olly@survex.com>

	* PLATFORMS: Added success result for GCC 3.2.3 on FreeBSD 4.8; fixed
	  a typo.

Wed Apr 06 23:04:15 BST 2005  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Added FIXME comment.

Wed Apr 06 22:52:53 BST 2005  Olly Betts <olly@survex.com>

	* ./: Removed ylwrap from svn:ignore.

Tue Apr 05 22:34:16 BST 2005  Olly Betts <olly@survex.com>

	* queryparser/queryparsertest.cc,queryparser/Makefile.am,
	  tests/Makefile.am: Moved queryparsertest into tests/.

Tue Apr 05 22:15:05 BST 2005  Olly Betts <olly@survex.com>

	* examples/: Updated svn:ignore property.

Tue Apr 05 21:34:13 BST 2005  Olly Betts <olly@survex.com>

	* queryparser/Makefile.am,configure.ac,extra/xapian/queryparser.h,