@@ -1,3 +1,11 @@
+Thu Apr 14 01:48:39 BST 2005  Olly Betts <olly@survex.com>
+
+	* include/xapian/queryparser.h: Added Xapian::SimpleStopper which
+	  should be sufficient for the majority of uses.
+	* include/xapian/queryparser.h,queryparser/queryparser_internal.h,
+	  queryparser/queryparser.cc: Changed QueryParser::set_stopper() to
+	  take a const pointer.
+
 Thu Apr 07 15:57:15 BST 2005  Olly Betts <olly@survex.com>
 
 	* api/omenquire.cc,common/omenquireinternal.h,common/multimatch.h,
